--- a/res/layout/findpwd_second_layout.xml
+++ b/res/layout/findpwd_second_layout.xml
@@ -26,8 +26,8 @@
                 android:paddingLeft="20dp"
                 android:paddingTop="15dp" >
 
-                <AutoCompleteTextView
-                    android:id="@+id/AutoCompleteTextView01"
+                <EditText
+                    android:id="@+id/et_find_pwd1"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:background="@null"
@@ -44,8 +44,8 @@
 				    android:layout_marginTop="10dp"
 				    android:background="@color/spilt_line_color" />
 
-                <AutoCompleteTextView
-                    android:id="@+id/et_username"
+                <EditText
+                    android:id="@+id/et_find_pwd2"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:layout_marginTop="15dp"
@@ -55,10 +55,7 @@
                     android:focusable="true"
                     android:hint="@string/register_pwd_hint2"
                     android:textColorHint="@color/color_4"
-                    android:textSize="@dimen/new_size_3" >
-
-                    <requestFocus />
-                </AutoCompleteTextView>
+                    android:textSize="@dimen/new_size_3" />
             </LinearLayout>
 
             <TextView
