--- a/res/layout/dialog_report.xml
+++ b/res/layout/dialog_report.xml
@@ -14,92 +14,75 @@
         android:gravity="center|left"
         android:orientation="vertical" >
 
-        <LinearLayout
-            android:id="@+id/lexit"
+        <RadioGroup
+            android:id="@+id/radioGroup1"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginLeft="10dp"
-            android:gravity="center_vertical" >
+            android:paddingLeft="10dp"
+            android:paddingTop="10dp" >
+        </RadioGroup>
+    </LinearLayout>
 
-            <ImageView
-                android:id="@+id/imageView1"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:src="@drawable/exit1" />
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:background="@color/white"
+        android:orientation="vertical" >
 
-            <LinearLayout
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginLeft="15dp"
-                android:orientation="vertical" >
-
-                <TextView
-                    android:id="@+id/textView1"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:textColor="@color/color_2"
-                    android:textSize="@dimen/new_size_3"
-                    android:text="关闭星探" />
-
-                <TextView
-                    android:id="@+id/textView2"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:textColor="@color/color_4"
-                    android:textSize="@dimen/new_size_2"
-                    android:text="关闭后您将不会收到新的信息" />
-
-            </LinearLayout>
-
-        </LinearLayout>
-
-        <LinearLayout
+        <TextView
+            android:id="@+id/textView1"
             android:layout_width="match_parent"
-            android:layout_height="1dp"
+            android:layout_height="wrap_content"
             android:layout_marginLeft="20dp"
-            android:background="@color/spilt_line_color"
-            android:orientation="vertical" >
+        android:layout_marginRight="20dp"
+            android:background="@drawable/bt_dialog_top"
+            android:textColor="@color/color_2"
+            	android:textSize="14sp"
+            android:text="举报描述" />
 
-        </LinearLayout>
-
-        <LinearLayout
-            android:id="@+id/lchange"
+        <EditText
+            android:id="@+id/etreport"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:gravity="center_vertical" >
+            android:textColor="@color/color_2"
+            android:layout_marginLeft="20dp"
+        android:layout_marginRight="20dp"
+            android:textSize="14sp"
+            android:hint="点击填写举报内容"
+            android:background="@null"
+            android:ems="10" >
 
-            <ImageView
-                android:id="@+id/imageView2"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginLeft="10dp"
-                android:src="@drawable/exit2" />
+            <requestFocus />
+        </EditText>
 
-            <LinearLayout
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginLeft="15dp"
-                android:orientation="vertical" >
+    </LinearLayout>
 
-                <TextView
-                    android:id="@+id/TextView02"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:textColor="@color/color_2"
-                    android:textSize="@dimen/new_size_3"
-                    android:text="注销用户" />
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:gravity="center"
+        android:orientation="horizontal"
+        android:weightSum="2" >
 
-                <TextView
-                    android:id="@+id/TextView01"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:textColor="@color/color_4"
-                    android:textSize="@dimen/new_size_2"
-                    android:text="注销或者切换账号登录" />
-            </LinearLayout>
+        <Button
+            android:id="@+id/bt_dialog_no_title_left"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_weight="1"
+            android:background="@drawable/bt_dialog_left"
+            android:text="取消"
+            android:textColor="@color/color_2"
+            android:textSize="15sp" />
 
-        </LinearLayout>
-
+        <Button
+            android:id="@+id/bt_dialog_no_title_right"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_weight="1"
+            android:background="@drawable/bt_dialog_right"
+            android:text="确认"
+            android:textColor="@color/color_2"
+            android:textSize="15sp" />
     </LinearLayout>
 
 </LinearLayout>
