--- a/res/layout/near_fansxiangqingmobanhead.xml
+++ b/res/layout/near_fansxiangqingmobanhead.xml
@@ -26,7 +26,9 @@
 				<include
        				layout="@layout/pictures_item" />
             </ViewFlipper>
+
             <LinearLayout
+                android:id="@+id/ltabs"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginBottom="3dp"
