--- a/res/layout/my_main_fans.xml
+++ b/res/layout/my_main_fans.xml
@@ -434,6 +434,7 @@
                 </LinearLayout>
 
                 <LinearLayout
+                    android:id="@+id/labout"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:layout_marginBottom="1dp"
@@ -470,6 +471,7 @@
                 </LinearLayout>
 
                 <LinearLayout
+                    android:id="@+id/lxieyi"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:layout_marginBottom="1dp"
