--- a/res/layout/my_yirenziliaomobanhead.xml
+++ b/res/layout/my_yirenziliaomobanhead.xml
@@ -318,6 +318,7 @@
                         <TextView
                             android:id="@+id/tvage"
                             style="@style/main_color3_style"
+                            android:layout_width="match_parent"
                             android:text="25" />
 
                         <LinearLayout
