--- a/res/layout/my_main_mingxing.xml
+++ b/res/layout/my_main_mingxing.xml
@@ -515,6 +515,7 @@
                 </LinearLayout>
 
                 <LinearLayout
+                    android:id="@+id/labout"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:layout_marginBottom="1dp"
@@ -551,6 +552,7 @@
                 </LinearLayout>
 
                 <LinearLayout
+                    android:id="@+id/lxieyi"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:layout_marginBottom="1dp"
