--- a/res/layout/my_renzheng.xml
+++ b/res/layout/my_renzheng.xml
@@ -60,7 +60,7 @@
                 android:gravity="bottom" >
 
                 <ImageView
-                    android:id="@+id/imageView4"
+                    android:id="@+id/imghead"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_marginBottom="5dp"
@@ -76,7 +76,7 @@
                     android:gravity="bottom" >
 
                     <TextView
-                        android:id="@+id/textView3"
+                        android:id="@+id/tvname"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:textColor="@color/color_2"
