--- a/res/layout/my_main_xingtan.xml
+++ b/res/layout/my_main_xingtan.xml
@@ -31,7 +31,7 @@
                     android:gravity="center_vertical" >
 
                     <ImageView
-                        android:id="@+id/imageView1"
+                        android:id="@+id/imghead"
                         android:layout_width="0dp"
                         android:layout_height="wrap_content"
                         android:layout_marginLeft="15dp"
