--- a/res/layout/dynamic_list_item.xml
+++ b/res/layout/dynamic_list_item.xml
@@ -165,16 +165,6 @@
             android:visibility="gone"
             android:padding="8dp"
              >
-
-            <TextView
-                android:id="@+id/tv_dynamic_replayname"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:textColor="@color/color_5"
-                android:textSize="@dimen/new_size_1"
-                android:text="我在等你: "
-                 />
-
             <EditText
                 android:id="@+id/et_dynamic_message"
                 android:layout_width="252dp"
@@ -185,6 +175,16 @@
                 android:textSize="@dimen/new_size_1" >
                 <requestFocus />
             </EditText>
+            
+            <TextView
+                android:id="@+id/tv_dynamic_send"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:textColor="@color/color_5"
+                android:textSize="@dimen/new_size_1"
+                android:background="@color/main_light_white"
+                android:text="发送"
+                 />
         </LinearLayout>
     </LinearLayout>
 
