--- a/res/layout/chance_offer_detail_layout.xml
+++ b/res/layout/chance_offer_detail_layout.xml
@@ -19,7 +19,7 @@
 
             <LinearLayout
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content"
+                android:layout_height="match_parent"
                 android:orientation="vertical" >
 
                 <include layout="@layout/chance_list_item" />
