--- a/res/layout/dynamic_list_item.xml
+++ b/res/layout/dynamic_list_item.xml
@@ -156,19 +156,21 @@
             android:layout_height="wrap_content" >
         </ListView>
 
-        <LinearLayout
-            android:id="@+id/ll_dynamic_message"
+        <RelativeLayout
+            android:id="@+id/rl_dynamic_message"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:background="@color/main_grey"
             android:orientation="horizontal"
-            android:visibility="gone"
+            android:visibility="visible"
             android:padding="8dp"
              >
             <EditText
                 android:id="@+id/et_dynamic_message"
                 android:layout_width="252dp"
                 android:layout_height="wrap_content"
+                android:layout_alignParentLeft="true"
+                android:layout_toLeftOf="@+id/tv_dynamic_send"
                 android:ems="10"
                 android:padding="8dp"
                 android:textColor="@color/color_5"
@@ -180,12 +182,15 @@
                 android:id="@+id/tv_dynamic_send"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:textColor="@color/color_5"
-                android:textSize="@dimen/new_size_1"
                 android:background="@color/main_light_white"
+                android:gravity="center"
+                android:padding="8dp"
                 android:text="发送"
-                 />
-        </LinearLayout>
+                android:singleLine="true"
+                android:textColor="@color/color_5"
+                android:textSize="@dimen/new_size_2" />
+
+        </RelativeLayout>
     </LinearLayout>
 
 </RelativeLayout>
