--- a/res/layout/about.xml
+++ b/res/layout/about.xml
@@ -2,7 +2,8 @@
     android:layout_width="fill_parent"
     android:layout_height="fill_parent"
     android:orientation="vertical" >
-	<include layout="@layout/main_top_image_layout" />
+	<include
+        layout="@layout/main_top_layout" />
 
 	<TextView
 	    android:id="@+id/textView1"
