--- a/res/layout/my_main_fans.xml
+++ b/res/layout/my_main_fans.xml
@@ -36,6 +36,8 @@
                         android:layout_height="wrap_content"
                         android:layout_marginLeft="15dp"
                         android:layout_marginRight="10dp"
+                        android:layout_marginTop="20dp"
+                        android:layout_marginBottom="20dp"
                         android:layout_weight="15"
                         android:src="@drawable/m23_06" />
 
@@ -60,7 +62,7 @@
                                 android:textColor="@color/color_2" />
 
                             <ImageView
-                                android:id="@+id/imageView2"
+                                android:id="@+id/imgloyal_pass"
                                 android:layout_width="wrap_content"
                                 android:layout_height="wrap_content"
                                 android:layout_marginLeft="10dp"
