--- a/res/layout/chance_list_item.xml
+++ b/res/layout/chance_list_item.xml
@@ -17,10 +17,10 @@
             android:id="@+id/iv_chance_banner"
             android:layout_width="match_parent"
             android:layout_height="90dp"
-            android:layout_gravity="center"
             android:layout_marginLeft="5dp"
             android:layout_marginRight="5dp"
             android:layout_marginTop="5dp"
+            android:scaleType="center"
              />
         
         <RelativeLayout
