--- a/res/layout/dynamic_fragment.xml
+++ b/res/layout/dynamic_fragment.xml
@@ -3,7 +3,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical" >
-	<include layout="@layout/main_top_image_layout" />
+	<include layout="@layout/main_top_layout" />
 
 	<ListView
 	    android:id="@+id/lv_dynamic"
