--- a/res/layout/my_chongzhi.xml
+++ b/res/layout/my_chongzhi.xml
@@ -18,7 +18,7 @@
             android:gravity="center_vertical" >
 
             <ImageView
-                android:id="@+id/imageView1"
+                android:id="@+id/imghead"
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
                 android:layout_marginLeft="15dp"
@@ -39,7 +39,7 @@
                     android:gravity="center_vertical" >
 
                     <TextView
-                        android:id="@+id/textView1"
+                        android:id="@+id/tvnickname"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:text="乱世飞尘"
@@ -69,7 +69,7 @@
                         android:textColor="@color/white" />
 
                     <TextView
-                        android:id="@+id/textView3"
+                        android:id="@+id/tvmoney"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:layout_marginLeft="5dp"
@@ -100,11 +100,11 @@
                     android:text="客户编号:" />
 
                 <TextView
-                    android:id="@+id/textView5"
+                    android:id="@+id/tvid"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_marginLeft="15dp"
-                    android:text="12345" />
+                    android:text="" />
 
             </LinearLayout>
 
