--- a/res/layout/my_chongzhifangshi.xml
+++ b/res/layout/my_chongzhifangshi.xml
@@ -28,7 +28,7 @@
             android:gravity="center_vertical" >
 
             <ImageView
-                android:id="@+id/imageView1"
+                android:id="@+id/imghead"
                 android:layout_width="84dp"
                 android:layout_height="84dp"
                 android:padding="7dp"
@@ -50,7 +50,7 @@
                     android:gravity="center_vertical" >
 
                     <TextView
-                        android:id="@+id/textView1"
+                        android:id="@+id/tvnickname"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:text="乱世飞尘"
@@ -80,7 +80,7 @@
                         android:textColor="@color/white" />
 
                     <TextView
-                        android:id="@+id/textView3"
+                        android:id="@+id/tvmoney"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:layout_marginLeft="5dp"
@@ -105,7 +105,7 @@
                 android:layout_marginBottom="5dp" >
 
                 <TextView
-                    android:id="@+id/textView6"
+                    android:id="@+id/tvname1"
                     android:layout_width="0dp"
                     android:layout_height="wrap_content"
                     android:layout_weight="1"
@@ -123,7 +123,7 @@
                     android:text="客户编号:" />
 
                 <TextView
-                    android:id="@+id/textView5"
+                    android:id="@+id/tvid"
                     android:layout_width="0dp"
                     android:layout_height="wrap_content"
                     android:layout_marginLeft="15dp"
@@ -133,7 +133,7 @@
                     android:text="12345" />
 
                 <TextView
-                    android:id="@+id/textView7"
+                    android:id="@+id/tvmoneymiaoshu"
                     android:layout_width="0dp"
                     android:layout_height="wrap_content"
                     android:layout_weight="1"
@@ -249,7 +249,7 @@
                         android:text="本次充值星币:" />
 
                     <TextView
-                        android:id="@+id/textView13"
+                        android:id="@+id/tvmoney1"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:text="100"
