--- a/res/layout/my_fansziliaomobanhead.xml
+++ b/res/layout/my_fansziliaomobanhead.xml
@@ -158,7 +158,7 @@
                 </LinearLayout>
 
                 <ImageView
-                    android:id="@+id/imageView9"
+                    android:id="@+id/imghead"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_marginLeft="5dp"
