--- a/res/layout/my_yirenziliaobianjihead.xml
+++ b/res/layout/my_yirenziliaobianjihead.xml
@@ -15,48 +15,18 @@
             android:layout_height="match_parent"
             android:gravity="center_horizontal"
             android:orientation="vertical" >
-<ViewFlipper
-                android:id="@+id/vfpics"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content" >
-                <include
-        			layout="@layout/pictures_item" />
-                <include
-       				layout="@layout/pictures_item" />
-				<include
-       				layout="@layout/pictures_item" />
-            </ViewFlipper>
-<LinearLayout
+            <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_marginBottom="3dp"
-                android:layout_marginLeft="10dp"
-                android:layout_marginRight="10dp"
-                android:layout_marginTop="3dp"
-                android:gravity="center" >
+                android:orientation="vertical" >
 
-                <ImageView
-                    android:id="@+id/imgtab1"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_marginRight="3dp"
-                    android:maxWidth="10dp"
-                    android:src="@drawable/f10_26" />
+                <com.timetalent.client.ui.view.EditPicturesLayout
+                    android:id="@+id/piclay"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content" >
+                    
+                </com.timetalent.client.ui.view.EditPicturesLayout>
 
-                <ImageView
-                    android:id="@+id/imgtab2"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_marginRight="3dp"
-                    android:maxWidth="10dp"
-                    android:src="@drawable/f10_24" />
-
-                <ImageView
-                    android:id="@+id/imgtab3"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:maxWidth="10dp"
-                    android:src="@drawable/f10_24" />
             </LinearLayout>
             <LinearLayout
                 android:layout_width="match_parent"
@@ -186,7 +156,7 @@
                 </LinearLayout>
 
                 <ImageView
-                    android:id="@+id/imageView9"
+                    android:id="@+id/imghead"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_marginLeft="5dp"
