--- a/res/layout/near_yirenxiangqingmobanhead.xml
+++ b/res/layout/near_yirenxiangqingmobanhead.xml
@@ -16,49 +16,18 @@
             android:gravity="center_horizontal"
             android:orientation="vertical" >
 
-            <ViewFlipper
-                android:id="@+id/vfpics"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content" >
-                <include
-        			layout="@layout/pictures_item" />
-                <include
-       				layout="@layout/pictures_item" />
-				<include
-       				layout="@layout/pictures_item" />
-            </ViewFlipper>
-
-            <LinearLayout
+<LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_marginBottom="3dp"
-                android:layout_marginLeft="10dp"
-                android:layout_marginRight="10dp"
-                android:layout_marginTop="3dp"
-                android:gravity="center" >
+                android:orientation="vertical" >
 
-                <ImageView
-                    android:id="@+id/imgtab1"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_marginRight="3dp"
-                    android:maxWidth="10dp"
-                    android:src="@drawable/f10_26" />
+                <com.timetalent.client.ui.view.PicturesLayout
+                    android:id="@+id/piclay"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content" >
+                    
+                </com.timetalent.client.ui.view.PicturesLayout>
 
-                <ImageView
-                    android:id="@+id/imgtab2"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_marginRight="3dp"
-                    android:maxWidth="10dp"
-                    android:src="@drawable/f10_24" />
-
-                <ImageView
-                    android:id="@+id/imgtab3"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:maxWidth="10dp"
-                    android:src="@drawable/f10_24" />
             </LinearLayout>
 
             <LinearLayout
