--- a/res/layout/my_sanwei.xml
+++ b/res/layout/my_sanwei.xml
@@ -35,7 +35,7 @@
                     android:text="胸围" />
 
                 <EditText
-                    android:id="@+id/editText1"
+                    android:id="@+id/etxiongwei"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_marginRight="20dp"
@@ -71,7 +71,7 @@
                     android:text="腰围" />
 
                 <EditText
-                    android:id="@+id/editText2"
+                    android:id="@+id/etyaowei"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_marginRight="20dp"
@@ -110,7 +110,7 @@
                     android:text="臀围" />
 
                 <EditText
-                    android:id="@+id/editText3"
+                    android:id="@+id/ettunwei"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_marginRight="20dp"
