--- a/res/layout/near_yirenxiangqingmobanhead.xml
+++ b/res/layout/near_yirenxiangqingmobanhead.xml
@@ -21,12 +21,12 @@
                 android:layout_height="wrap_content"
                 android:orientation="vertical" >
 
-                <com.timetalent.client.ui.view.PicturesLayout
+                <com.timetalent.client.ui.view.NearPicturesLayout
                     android:id="@+id/piclay"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content" >
                     
-                </com.timetalent.client.ui.view.PicturesLayout>
+                </com.timetalent.client.ui.view.NearPicturesLayout>
 
             </LinearLayout>
 
@@ -158,7 +158,7 @@
                 </LinearLayout>
 
                 <ImageView
-                    android:id="@+id/imageView9"
+                    android:id="@+id/imghead"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_marginLeft="5dp"
