--- a/res/layout/near_yirenzuopin_item.xml
+++ b/res/layout/near_yirenzuopin_item.xml
@@ -1,88 +1,99 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="fill_parent"
     android:layout_height="wrap_content"
-    android:gravity="center_vertical"
-    android:background="@color/main_white" >
+    android:background="@color/main_white"
+    android:gravity="center_vertical" >
 
     <ImageView
         android:id="@+id/imgzuopin"
-        android:layout_width="wrap_content"
+        android:layout_width="0dp"
         android:layout_height="wrap_content"
+        android:layout_weight="2"
         android:background="@color/main_white"
         android:src="@drawable/f10_49" />
 
     <LinearLayout
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginBottom="10dp"
-        android:layout_marginLeft="10dp"
-        android:layout_marginRight="10dp"
-        android:layout_marginTop="10dp"
-        android:background="@color/main_white"
-        android:orientation="vertical" >
+        android:layout_weight="7" >
 
-        <TextView
-            android:id="@+id/TextView02"
+        <LinearLayout
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:layout_marginBottom="10dp"
+            android:layout_marginLeft="10dp"
+            android:layout_marginRight="10dp"
+            android:layout_marginTop="10dp"
             android:background="@color/main_white"
-            android:textColor="@color/color_3"
-            android:textSize="@dimen/new_size_3"
-            android:text="片名:" />
+            android:gravity="center_vertical"
+            android:orientation="vertical" >
 
-        <TextView
-            android:id="@+id/TextView01"
+            <TextView
+                android:id="@+id/TextView02"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:background="@color/main_white"
+                android:text="片名:"
+                android:textColor="@color/color_3"
+                android:textSize="@dimen/new_size_3" />
+
+            <TextView
+                android:id="@+id/TextView01"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:background="@color/main_white"
+                android:text="角色:"
+                android:textColor="@color/color_3"
+                android:textSize="@dimen/new_size_3" />
+
+            <TextView
+                android:id="@+id/TextView03"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:background="@color/main_white"
+                android:text="时间:"
+                android:textColor="@color/color_3"
+                android:textSize="@dimen/new_size_3" />
+        </LinearLayout>
+
+        <LinearLayout
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:layout_marginBottom="10dp"
+            android:layout_marginLeft="10dp"
+            android:layout_marginRight="10dp"
+            android:layout_marginTop="10dp"
             android:background="@color/main_white"
-            android:textColor="@color/color_3"
-            android:textSize="@dimen/new_size_3"
-            android:text="角色:" />
-
-        <TextView
-            android:id="@+id/TextView03"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:background="@color/main_white"
-            android:textColor="@color/color_3"
-            android:textSize="@dimen/new_size_3"
-            android:text="时间:" />
-    </LinearLayout>
-
-    <LinearLayout
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginRight="10dp"
-        android:background="@color/main_white"
-        android:orientation="vertical" >
+            android:gravity="center_vertical"
+            android:orientation="vertical" >
 
         <TextView
             android:id="@+id/tvzuopinname"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:background="@color/main_white"
+            android:text="一夜惊喜"
             android:textColor="@color/color_3"
-            android:textSize="@dimen/new_size_3"
-            android:text="一夜惊喜" />
+            android:textSize="@dimen/new_size_3" />
 
         <TextView
             android:id="@+id/tvzuopinjuese"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:background="@color/main_white"
+            android:text="米雪"
             android:textColor="@color/color_3"
-            android:textSize="@dimen/new_size_3"
-            android:text="米雪" />
+            android:textSize="@dimen/new_size_3" />
 
         <TextView
             android:id="@+id/tvzuopintime"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:background="@color/main_white"
+            android:text="2013年8月9日"
             android:textColor="@color/color_3"
-            android:textSize="@dimen/new_size_3"
-            android:text="2013年8月9日" />
-
+            android:textSize="@dimen/new_size_3" />
+    </LinearLayout>
     </LinearLayout>
 
 </LinearLayout>
