--- a/res/layout/about.xml
+++ b/res/layout/about.xml
@@ -5,10 +5,9 @@
 	<include
         layout="@layout/main_top_layout" />
 
-	<TextView
-	    android:id="@+id/textView1"
-	    android:layout_width="wrap_content"
-	    android:layout_height="wrap_content"
-	    android:text="关于星探" />
+	<WebView
+	    android:id="@+id/wb"
+	    android:layout_width="match_parent"
+	    android:layout_height="match_parent" />
 	
 </LinearLayout>
