--- a/res/layout/addresscheck.xml
+++ b/res/layout/addresscheck.xml
@@ -3,7 +3,8 @@
     android:layout_width="fill_parent"
     android:layout_height="fill_parent"
     android:orientation="vertical" >
-
+<include
+        layout="@layout/main_top_layout" />
     <Spinner
         android:id="@+id/spinner1"
         android:layout_width="match_parent"
