--- a/res/layout/commom_back_btn.xml
+++ b/res/layout/commom_back_btn.xml
@@ -2,7 +2,7 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="45dip"
     android:layout_height="match_parent"
-    android:background="@drawable/common_tab_bg"
+    android:src="@drawable/btn_gobackl"
     android:clickable="true"
     android:onClick="back" >
 
@@ -12,6 +12,6 @@
         android:layout_gravity="center_vertical"
         android:layout_marginLeft="11dp"
         android:scaleType="centerInside"
-        android:src="@drawable/mm_title_back" />
+         android:src="@drawable/btn_gobackl" />
 
 </LinearLayout>
