--- a/res/layout/my_fuwu.xml
+++ b/res/layout/my_fuwu.xml
@@ -87,6 +87,7 @@
                 android:id="@+id/gvbody"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
+                android:layout_weight="1"
                 android:verticalSpacing="10dp"  
     			android:horizontalSpacing="10dp"
                 android:layout_marginBottom="10dp"
@@ -96,50 +97,14 @@
                 android:numColumns="3" >
             </GridView>
 
-            <RadioGroup
-                android:id="@+id/radioGroup"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_marginBottom="30dp"
-                android:layout_marginLeft="20dp"
-                android:layout_marginRight="20dp"
-                android:layout_marginTop="20dp"
-                android:contentDescription="职位"
-                android:orientation="horizontal" >
 
-                    <RadioButton
-                        android:id="@+id/radioButton4"
-                        android:layout_width="0dp"
-                        android:layout_height="wrap_content"
-                        android:layout_weight="1"
-                        android:background="@drawable/btn_anshi"
-                        android:button="@null"
-                        android:textColor="@color/color_4"
-                        android:textSize="@dimen/new_size_2" />
-
-                    <RadioButton
-                        android:id="@+id/radioButton5"
-                        android:layout_width="0dp"
-                        android:layout_height="wrap_content"
-                        android:layout_weight="1"
-                        android:background="@drawable/btn_anjian"
-                        android:button="@null"
-                        android:checked="true"
-                        android:textColor="@color/color_4"
-                        android:textSize="@dimen/new_size_2" />
-
-                </RadioGroup>
-
+        </LinearLayout>
+    </ScrollView>
             <Button
                 android:id="@+id/btok"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_weight="1"
-                android:background="@drawable/btn_red"
-                android:text="保存"
+                android:background="@drawable/btn_green"
+                android:text="下一步"
                 android:textColor="@color/white" />
-
-        </LinearLayout>
-    </ScrollView>
-
 </LinearLayout>
