修改机会 和 添加消息对话框

--- a/res/layout/chance_offer_layout.xml
+++ b/res/layout/chance_offer_layout.xml
@@ -18,17 +18,16 @@
 
             <FrameLayout
                 android:layout_width="match_parent"
+                android:visibility="gone"
                 android:layout_height="wrap_content" >
 
                 <ImageView
-                    android:id="@+id/iv_chance_add_head"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:src="@drawable/c11_02"
                     android:scaleType="fitXY" />
 
                 <Button
-                    android:id="@+id/bt_chance_offer_picture"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_gravity="bottom|right"
@@ -164,7 +163,7 @@
                         android:text="@string/chance_text5" />
 
                     <EditText
-                        android:id="@+id/editText2"
+                        android:id="@+id/et_chance_add_title_des"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:layout_marginRight="10dp"
