添加消息处理 和时间戳 处理

--- a/res/layout/dynamic_list_item.xml
+++ b/res/layout/dynamic_list_item.xml
@@ -113,6 +113,7 @@
                     android:id="@+id/tv_dynamic_time"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
+                    android:layout_centerVertical="true"
                     android:layout_marginLeft="3dp"
                     android:layout_toRightOf="@+id/iv_dynamic_time"
                     android:text="10分钟前"
@@ -123,7 +124,9 @@
                     android:id="@+id/iv_dynamic_good_num"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:layout_marginRight="2dp"
+                    android:layout_centerHorizontal="false"
+                    android:layout_centerVertical="true"
+                    android:layout_marginRight="5dp"
                     android:layout_toLeftOf="@+id/iv_dynamic_good"
                     android:text="0"
                     android:textColor="@color/color_4"
@@ -136,6 +139,7 @@
                     android:layout_centerVertical="true"
                     android:layout_marginRight="20dp"
                     android:layout_toLeftOf="@+id/iv_dynamic_message"
+                    android:padding="3dp"
                     android:src="@drawable/btn_image_dynamic_good" />
 
                 <ImageView
@@ -145,7 +149,9 @@
                     android:layout_alignParentRight="true"
                     android:layout_centerVertical="true"
                     android:layout_marginRight="10dp"
+                    android:padding="5dp"
                     android:src="@drawable/d3_46" />
+
             </RelativeLayout>
         </RelativeLayout>
 
