--- a/res/values/colors.xml
+++ b/res/values/colors.xml
@@ -48,5 +48,8 @@
 	  <color name="error_item_color">#F6EBE6</color>
 	  <color name="gray_pressed">#b5b5b6</color>
      <color name="gray_normal">#666667</color>
+         <color name="btn_blue_normal">#1e90ff</color>
+    <color name="btn_blue_pressed">#0066FF</color>
+    <color name="btn_gray_pressed_status">#b5b5b6</color>
      <color name="btn_gray_normal">#c0c0c0</color>
     </resources>
