--- a/res/layout/near_xingtanxiangqingmobanhead.xml
+++ b/res/layout/near_xingtanxiangqingmobanhead.xml
@@ -171,12 +171,12 @@
                     android:orientation="vertical" >
 
                     <TextView
-                        android:id="@+id/textView7"
+                        android:id="@+id/tvcontent"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:textColor="@color/color_3"
                         android:textSize="@dimen/new_size_2"
-                        android:text="人物诉求：温柔美丽音乐系高材生，喜欢K歌" />
+                        android:text="" />
 
                     <TextView
                         android:id="@+id/textView21"
