--- a/res/layout/main_top_image_layout.xml
+++ b/res/layout/main_top_image_layout.xml
@@ -7,11 +7,12 @@
 
     <ImageView
         android:id="@+id/main_top_left"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_width="40dp"
+        android:layout_height="40dp"
         android:layout_centerVertical="true"
         android:layout_alignParentLeft="true"
-        android:padding="5dp"
+        android:background="@null"
+        android:layout_marginLeft="10dp"
         />
 
     
